--- a/index.html
+++ b/index.html
@@ -8,8 +8,75 @@
 </head>
 
 <body>
-<h1>Hello</h1>
- <input type="file">
+  <header>
+    <div class="container">
+      <div class="head">
+        <div class="head__logo"><img src="img/logo.jpg" alt="advgorchakov.ru logo" title="logotype"></div>
+        <nav class="head__nav">
+          <ul class="main-menu">
+            <li class="main-menu__item"><a href="" class="main-menu__link"><span>О компании</span></a></li>
+            <li class="main-menu__item"><a href="" class="main-menu__link"><span>Проекты</span></a></li>
+            <li class="main-menu__item"><a href="" class="main-menu__link"><span>Стоимость услуг </span></a></li>
+            <li class="main-menu__item"><a href="" class="main-menu__link"><span>Контакты</span></a></li>
+          </ul>
+        </nav>
+        <div class="head__contact">
+          <div class="phone">+7(499) 391-56-54</div>
+          <div class="mail">advgorchakov@mail.ru</div>
+        </div>
+      </div>
+      <div class="head-title">
+        <div class="head-title__first">Мы — арбитражные адвокаты</div>
+        <div class="head-title__second">Наша специализация: арбитражные споры</div>
+        <div class="head-title__fourth">Защищаем интересы клиентов в арбитражных судах <br />и обеспечиваем юридическое сопровождение проектов</div>
+      </div>
+    </div>
+  </header>
+
+  <div class="content-wrapp">
+    <div class="mod">
+      <div class="container">
+        <h1>Коллегия адвокатов<br />
+        «Горчаков, Бирюля и партнеры»</h1>
+        <p>Специализируемся на сложных коммерческих спорах в интересах крупного и среднего бизнеса. За годы практики сумма защищенных активов превысила 34 млрд долларов.</p>
+        <p>Среди наших клиентов — ведущие банки и мобильные операторы, крупнейшие авиаперевозчики и промышленные предприятия. Мы индивидуально подходим к каждому проекту и предлагаем новые правовые позиции с учетом актуальных идей и тенденций. Решения по нашим делам зачастую формируют судебную практику.</p>
+      </div>
+    </div>
+    <div class="mod">
+      <div class="container">
+        <ul class="presentation">
+          <li class="presentation__item">
+            <div class="presentation__link"><span class="mark">87%</span><span class="txt">выигранных<br />дел в суде</span></div>
+          </li>
+          <li class="presentation__item">
+            <div class="presentation__link"><span class="mark">150</span><span class="txt">дел<br />в год</span></div>
+          </li>
+          <li class="presentation__item">
+            <div class="presentation__link"><span class="mark">1 млрд.</span><span class="txt">рублей<br />взыскано</span></div>
+          </li>
+          <li class="presentation__item">
+            <div class="presentation__link"><span class="mark">56</span><span class="txt">постоянных<br />клиентов</span></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="mod">
+      <div class="container"></div>
+    </div>
+    <div class="mod">
+      <div class="container"></div>
+    </div>
+    <div class="mod">
+      <div class="container"></div>
+    </div>
+    <div class="mod">
+      <div class="container"></div>
+    </div>
+  </div>
+
+  <footer>
+
+  </footer>
   <script type="text/javascript" src="node_modules/requirejs/require.js" data-main="js/config"></script>
   <script>
     require(['config'], function () {
