--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="head__contact">
           <div class="phone">+7(499) 391-56-54</div>
-          <div class="mail">advgorchakov@mail.ru</div>
+          <a href="mailto:advgorchakov@mail.ru" class="mail">advgorchakov@mail.ru</a>
         </div>
       </div>
       <div class="head-title">
@@ -46,36 +46,263 @@
       <div class="container">
         <ul class="presentation">
           <li class="presentation__item">
-            <div class="presentation__link"><span class="mark">87%</span><span class="txt">выигранных<br />дел в суде</span></div>
+            <span class="mark">87%</span><span class="txt">выигранных<br />дел в суде</span>
           </li>
           <li class="presentation__item">
-            <div class="presentation__link"><span class="mark">150</span><span class="txt">дел<br />в год</span></div>
+            <span class="mark">150</span><span class="txt">дел<br />в год</span>
           </li>
           <li class="presentation__item">
-            <div class="presentation__link"><span class="mark">1 млрд.</span><span class="txt">рублей<br />взыскано</span></div>
+            <span class="mark">1 млрд.</span><span class="txt">рублей<br />взыскано</span>
           </li>
           <li class="presentation__item">
-            <div class="presentation__link"><span class="mark">56</span><span class="txt">постоянных<br />клиентов</span></div>
+            <span class="mark">56</span><span class="txt">постоянных<br />клиентов</span>
           </li>
         </ul>
       </div>
     </div>
     <div class="mod">
-      <div class="container"></div>
+      <div class="container">
+        <div class="list-title">Наши арбитражные адвокаты специализируются на судебных спорах следующих категорий:</div>
+        <ul class="activity">
+          <li class="activity__item">
+            <div class="activity__title">Взыскание задолженности</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании возникшей задолженности необходимо доказать не только наличие.</div>
+          </li>
+          <li class="activity__item">
+            <div class="activity__title">договорные и внедоговорные споры</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании возникшей задолженности необходимо доказать не только наличие.</div>
+          </li>
+          <li class="activity__item">
+            <div class="activity__title">Корпоративные споры</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании возникшей задолженности.</div>
+          </li>
+          <li class="activity__item">
+            <div class="activity__title">Споры в сфере госконтрактов</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании возникшей задолженности необходимо доказать.</div>
+          </li>
+          <li class="activity__item">
+            <div class="activity__title">интеллектуальная собственность</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании возникшей задолженности необходимо доказать не только.</div>
+          </li>
+          <li class="activity__item">
+            <div class="activity__title">недвижимость</div>
+            <div class="activity__txt">Одна из наиболее распространенных категорий судебных споров – взыскание дебиторской задолженности по исполненным договорам: подряда, субподряда, поставки, аренды, инвестирования, страхования, оказания услуг, лизинга и т.д. Специфика указанных споров заключается в том, что при взыскании.</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="mod mod--scroll">
+      <div class="container">
+        <div class="h2">Наша арбитражная практика</div>
+        <div id="practic-wrapp">
+          <div class="practic">
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+            <div class="practic__item card">
+              <img src="img/bckg-card.jpg" alt="advokat.ru" />
+              <div class="card__inner">
+                <div class="card__title">Взыскание задолженности</div>
+                <div class="card__txt card__txt--com">по договору поставки производственного оборудования</div>
+                <div class="card__rezult">Взыскана полностью</div>
+                <div class="card__txt">задолженность в сумме</div>
+                <div class="card__money">15 000 500 рублей</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="mod">
-      <div class="container"></div>
+      <div class="container">
+        <div class="h2">Примеры проектов</div>
+        <table class="examples">
+          <thead>
+            <tr>
+              <th>дело</th>
+              <th>результат</th>
+              <th>годы</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Защита товарного знака «Sosu»</td>
+              <td><div class="cash">100 500 млн. рублей</div> Еще какой-то комментарий к результату	</td>
+              <td>2015—2016</td>
+            </tr>
+            <tr>
+              <td>Стадион в Ростове-на-Дону к ЧМ «Россия - 2018»</td>
+              <td><div class="cash">100 500 млн. рублей</div></td>
+              <td>2016</td>
+            </tr>
+            <tr>
+              <td>Стадион в Калининграде к ЧМ «Россия 2018»</td>
+              <td><div class="cash">100 500 млн. рублей</div></td>
+              <td>2015—2016</td>
+            </tr>
+            <tr>
+              <td>Vegas Крокус сити</td>
+              <td><div class="cash">100 500 млн. рублей</div></td>
+              <td>2016</td>
+            </tr>
+            <tr>
+              <td>Твой дом</td>
+              <td><div class="cash">100 500 млн. рублей</div> Еще какой-то комментарий к результату</td>
+              <td>2015—2016</td>
+            </tr>
+            <tr>
+              <td>Дальневосточный федеральный университет</td>
+              <td><div class="cash">100 500 млн. рублей</div> Еще какой-то комментарий к результату</td>
+              <td>2016</td>
+            </tr>
+            <tr>
+              <td>Демонтаж гостиницы «Россия»	</td>
+              <td><div class="cash">100 500 млн. рублей</div> Еще какой-то комментарий к результату</td>
+              <td>2015—2016</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="more-examples"><a href="#">Больше примеров</a></div>
+      </div>
     </div>
     <div class="mod">
-      <div class="container"></div>
-    </div>
-    <div class="mod">
-      <div class="container"></div>
+      <div class="container">
+        <div class="h2">Стоимость услуг</div>
+        <div class="price">
+          <div class="price__item">
+            <table class="price-table">
+              <tr>
+                <td>Первичная консультация 	</td>
+                <td>Бесплатно!</td>
+              </tr>
+              <tr>
+                <td>Анализ документов<br />и обстоятельств дела</td>
+                <td>Бесплатно!</td>
+              </tr>
+              <tr>
+                <td>Ведение дела<br />в арбитражном суде</td>
+                <td>Без предоплаты!<br />От 60 000 рублей.<br />После положительного решения суда.	</td>
+              </tr>
+              <tr>
+                <td>Послесудебное сопровождение<br />исполнительного производства</td>
+                <td>Без предоплаты!<br />После исполнения решения суда,<br />2-10% от реально взысканных<br />или защищенных сумм.</td>
+              </tr>
+            </table>
+          </div>
+          <div class="price__item">
+            <p>
+              В соответствии со статьями <br />110 АПК РФ, 98, 100 ГПК РФ, <br />стороне, в пользу которой <br />состоялось решение суда,<br /> суд присуждает возместить <br />все понесенные по делу расходы, <br />включая расходы на оплату услуг представителя, за счет<br /> проигравшей стороны.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
-  <footer>
 
+  <footer>
+    <div class="container">
+      <p>МГКА «Горчаков, Бирюля и партнеры»</p>
+      <p>Телефон: +7(499) 391-56-54. E-mail: advgorchakov@mail.ru</p>
+      <p>Advgorchakov.ru Copyright 2015. Все права защищены. Копирование и использование материалов сайта возможно только с письменного разрешения правообладателя.</p>
+    </div>
   </footer>
   <script type="text/javascript" src="node_modules/requirejs/require.js" data-main="js/config"></script>
   <script>
